@@ -3,6 +3,7 @@ package com.sports.server.query.application;
 import static org.junit.Assert.assertEquals;
 
 import com.sports.server.command.game.domain.LineupPlayer;
+import com.sports.server.common.application.EntityUtils;
 import com.sports.server.query.dto.response.LineupPlayerResponse;
 import com.sports.server.query.dto.response.LineupPlayerResponse.PlayerResponse;
 import com.sports.server.support.ServiceTest;
@@ -10,6 +11,7 @@ import com.sports.server.support.fixture.LineupPlayerFixtureRepository;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
+import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.jdbc.Sql;
@@ -21,7 +23,7 @@ public class LineupPlayerQueryServiceTest extends ServiceTest {
     private LineupPlayerQueryService lineupPlayerQueryService;
 
     @Autowired
-    private LineupPlayerFixtureRepository lineupPlayerFixtureRepository;
+    private EntityUtils entityUtils;
 
     @Test
     void 라인업_조회시_게임팀_아이디의_오름차순으로_반환된다() {
@@ -49,14 +51,18 @@ public class LineupPlayerQueryServiceTest extends ServiceTest {
 
         // given
         Long gameId = 1L;
-        List<LineupPlayer> playingPlayers = lineupPlayerFixtureRepository.findPlayingPlayersByGameId(gameId);
 
         // when
         List<LineupPlayerResponse> responses = lineupPlayerQueryService.getPlayingLineup(gameId);
 
         // then
-        assertEquals(playingPlayers.stream().map(LineupPlayer::getId).toList(), responses.stream()
-                .flatMap(lp -> lp.gameTeamPlayers().stream().map(PlayerResponse::id))
-                .collect(Collectors.toList()));
+        List<LineupPlayer> lineupPlayers = responses.stream()
+                .flatMap(lpr -> lpr.gameTeamPlayers().stream()
+                        .map(pr -> entityUtils.getEntity(pr.id(), LineupPlayer.class)))
+                .toList();
+
+        Assertions.assertThat(lineupPlayers)
+                .map(LineupPlayer::isPlaying)
+                .containsOnly(true);
     }
 }
